<resources>
    <string name="app_name">AutoSignInTool</string>
    <!-- Settings Activity Title -->
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">设置</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="week_title">开启时间</string>

    <!-- Sync Preferences -->
    <string name="switch_title">自动签卡开关</string>
    <string name="switch_red_packet_title">红包助手开关</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="switch_summary_on">自动签卡开启</string>
    <string name="switch_summary_off">自动签卡关闭</string>
    <string name="switch_red_packet_summary_on">红包助手开启</string>
    <string name="switch_red_packet_summary_off">红包助手关闭</string>

    <string name="red_packet_description">红包助手</string>
    <string name="auto_signin_description">自动签卡助手</string>
</resources>