<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

        <Preference
            app:key="location"
            app:title="定位"
            />

        <Preference
            app:key="start"
            app:title="打开无障碍设置"
            />

        <Preference
            app:key="launch"
            app:title="打开飞书"
            />

        <SwitchPreferenceCompat
            app:key="switch"
            app:title="@string/switch_title"
            app:summaryOff="@string/switch_summary_off"
            app:summaryOn="@string/switch_summary_on"/>

        <ListPreference
            app:defaultValue="workdays"
            app:entries="@array/week_entries"
            app:entryValues="@array/week_values"
            app:key="choose_date"
            app:title="@string/week_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>